--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Home Section 1 -->
+    <section class="section1_header" >
+        <div></div>
+    </section>
 </body>
 </html>
